--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-  --font-family: "Open Sans", sans-serif;
+  --font-family: "Rubik", sans-serif;
   --content-width: 1000px;
   --container-offset: 15px;
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
@@ -22,6 +22,41 @@
 }
 
 /* stylelint-disable */ /* stylelint-disable */ /* stylelint-disable value-keyword-case */
+@font-face {
+  font-family: "Rubik";
+  src: url("../fonts/../fonts/Rubik-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Rubik";
+  src: url("../fonts/../fonts/Rubik-Light.woff2") format("woff2");
+  font-weight: 300;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Rubik";
+  src: url("../fonts/../fonts/Rubik-Medium.woff2") format("woff2");
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Rubik";
+  src: url("../fonts/../fonts/Rubik-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Rubik";
+  src: url("../fonts/../fonts/Rubik-Black.woff2") format("woff2");
+  font-weight: 900;
+  font-display: swap;
+  font-style: normal;
+}
 html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -44,6 +79,11 @@ p {
 
 .page {
   height: 100%;
+  font-family: var(--font-family, sans-serif);
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
   font-family: var(--font-family, sans-serif);
   -webkit-text-size-adjust: 100%;
 }
@@ -2007,5 +2047,59 @@ textarea.error ~ .textarea_resize::before {
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
+}
+
+.enter {
+  max-width: 500px;
+  margin: 0 auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.enter input::-webkit-input-placeholder {
+  color: #9e9e9e;
+}
+.enter input::-moz-placeholder {
+  color: #9e9e9e;
+}
+.enter input:-ms-input-placeholder {
+  color: #9e9e9e;
+}
+.enter input::-ms-input-placeholder {
+  color: #9e9e9e;
+}
+.enter input::placeholder {
+  color: #9e9e9e;
+}
+.enter__title {
+  font-size: 48px;
+  line-height: 100%;
+  color: #333333;
+  text-align: center;
+}
+.enter__title span {
+  color: #FF4D1C;
+}
+@media (max-width: 1200px) {
+  .enter__title {
+    font-size: 38px;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 767px) {
+  .enter__title {
+    font-size: 28px;
+    max-width: 300px;
+  }
+}
+.enter .pp__check label a {
+  color: #EC1744;
+  text-decoration: underline;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+}
+.enter .pp__check label a:hover {
+  color: #333333;
 }
 /*# sourceMappingURL=main.css.map */
