--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,12 @@ a {
 
 .site-container {
   overflow: hidden;
+  padding: 80px 0;
+}
+@media (max-width: 1200px) {
+  .site-container {
+    padding: 50px 0;
+  }
 }
 
 .is-hidden {
@@ -183,6 +189,10 @@ a {
 
 .page--ios .dis-scroll {
   position: relative;
+}
+
+.container-main {
+  max-width: 1200px;
 }
 
 /*! CSS Used from: https://nizhny800.ru/static/css/reset.css?v=1.9.100603 */
@@ -496,7 +506,7 @@ button span {
 
 .info__item {
   width: 100%;
-  margin-bottom: 40px;
+  margin-bottom: 35px;
 }
 
 .info__item:last-child {
@@ -838,15 +848,6 @@ button span {
   border-bottom: 2px solid #F3F3F3;
 }
 
-.container {
-  padding-top: 100px;
-  padding-bottom: 40px;
-}
-
-.content-block__cont {
-  padding-bottom: 40px;
-}
-
 .content-block__more {
   width: 100%;
   text-align: center;
@@ -865,11 +866,6 @@ button span {
 
 .content-block__more:not(:only-child) {
   margin-top: 20px;
-}
-
-.content-block__more:hover {
-  background-color: #F3F3F3;
-  border-color: #161313;
 }
 
 .content-block-more {
@@ -899,9 +895,6 @@ button span {
 }
 
 .content-block-more span {
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
   font-size: 22px;
   font-weight: 600;
   font-family: "Graphik LCG", sans-serif;
@@ -1009,9 +1002,9 @@ input:focus {
 }
 
 .profile-form__row-cont {
-  padding-bottom: 20px;
+  padding-bottom: 35px;
   border-bottom: 2px solid #F3F3F3;
-  margin-bottom: 20px;
+  margin-bottom: 35px;
 }
 
 .profile-form__row-cont:after {
@@ -1035,7 +1028,7 @@ input:focus {
 }
 
 .profile-form-item__title {
-  padding: 10px 0;
+  padding-bottom: 10px 0;
 }
 
 .profile-form-item__title span {
@@ -1130,7 +1123,6 @@ input:focus {
 
 .sn-input-box.sn-input-box_w {
   width: 100%;
-  margin-bottom: 20px;
 }
 
 .pp-check_c {
@@ -1262,11 +1254,6 @@ label {
   width: 360px;
 }
 
-@media (max-width: 1799px) {
-  .container {
-    padding-top: 43px;
-  }
-}
 @media (max-width: 1420px) {
   .info__item:last-child {
     padding-top: 65px;
@@ -1395,12 +1382,6 @@ label {
     width: calc(100% - 430px);
   }
 }
-@media only screen and (max-width: 1279px) and (orientation: portrait) {
-  .container {
-    padding-top: 40px;
-    padding-bottom: 40px;
-  }
-}
 @media only screen and (max-width: 1050px) {
   .showcase_buttons {
     -webkit-box-orient: vertical;
@@ -1419,9 +1400,6 @@ label {
   }
   .addnew_img img {
     width: 40%;
-  }
-  .content-block__cont {
-    padding-bottom: 30px;
   }
   p.small_bold {
     font-size: 12px;
@@ -1660,38 +1638,6 @@ p {
     line-height: 26px;
   }
 }
-input, textarea {
-  border: none;
-  width: 100%;
-  max-width: 100%;
-  padding: 16px 24px;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 23px;
-  background-color: #f7f7f7 !important;
-  display: block;
-  overflow: hidden;
-  -webkit-transition: 0.5s !important;
-  -o-transition: 0.5s !important;
-  transition: 0.5s !important;
-}
-input:hover, textarea:hover {
-  -webkit-transition: all 0.5s !important;
-  -o-transition: all 0.5s !important;
-  transition: all 0.5s !important;
-  -webkit-box-shadow: inset 0 0 0 2px #040404 !important;
-  box-shadow: inset 0 0 0 2px #040404 !important;
-}
-input:focus, textarea:focus {
-  outline: none;
-  -webkit-transition: all 0.5s !important;
-  -o-transition: all 0.5s !important;
-  transition: all 0.5s !important;
-  -webkit-box-shadow: inset 0 0 0 2px #040404 !important;
-  box-shadow: inset 0 0 0 2px #040404 !important;
-}
-
 .new__project-steps {
   width: 100%;
 }
@@ -1704,7 +1650,9 @@ input:focus, textarea:focus {
   display: block;
   font-weight: 400;
   font-size: 16px;
+  line-height: 100%;
   color: #FF4D1C;
+  margin-top: 10px;
 }
 
 .content-block-more {
@@ -1713,6 +1661,7 @@ input:focus, textarea:focus {
 .content-block-more:hover {
   background: #040404;
   color: #ffffff;
+  text-decoration: none;
 }
 
 @media (max-width: 767px) {
@@ -2018,8 +1967,26 @@ textarea.error ~ .textarea_resize::before {
   display: flex;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
+  top: 40px;
+}
+.gender .check label.error {
+  margin-top: 10px;
+}
+@media (max-width: 767px) {
+  .gender .check label.error {
+    margin-top: 0;
+  }
+}
+@media (max-width: 767px) {
+  .gender {
+    top: 0;
+  }
 }
 
+.pp__check {
+  margin-top: 50px;
+  margin-bottom: 0;
+}
 .pp__check .check label.error {
   left: 0;
   top: -15px;
@@ -2029,6 +1996,21 @@ textarea.error ~ .textarea_resize::before {
   .pp__check .check label.error {
     top: -12px;
   }
+}
+
+.pp-check_c {
+  margin-bottom: 0;
+}
+
+.pp__check label a {
+  color: #EC1744;
+  text-decoration: underline;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+}
+.pp__check label a:hover {
+  color: #333333;
 }
 
 .info__item.border-top {
@@ -2049,11 +2031,45 @@ textarea.error ~ .textarea_resize::before {
   align-items: flex-start;
 }
 
+.profile-form__row-cont {
+  margin-top: 50px;
+}
+
+input, textarea {
+  border: none;
+  width: 100%;
+  max-width: 100%;
+  padding: 16px 24px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 23px;
+  background-color: #f7f7f7 !important;
+  display: block;
+  overflow: hidden;
+  -webkit-transition: 0.5s !important;
+  -o-transition: 0.5s !important;
+  transition: 0.5s !important;
+}
+input:hover, textarea:hover {
+  -webkit-transition: all 0.5s !important;
+  -o-transition: all 0.5s !important;
+  transition: all 0.5s !important;
+  -webkit-box-shadow: inset 0 0 0 2px #040404 !important;
+  box-shadow: inset 0 0 0 2px #040404 !important;
+}
+input:focus, textarea:focus {
+  outline: none;
+  -webkit-transition: all 0.5s !important;
+  -o-transition: all 0.5s !important;
+  transition: all 0.5s !important;
+  -webkit-box-shadow: inset 0 0 0 2px #040404 !important;
+  box-shadow: inset 0 0 0 2px #040404 !important;
+}
+
 .enter {
   max-width: 500px;
   margin: 0 auto;
-  margin-top: 100px;
-  margin-bottom: 100px;
 }
 .enter input::-webkit-input-placeholder {
   color: #9e9e9e;
@@ -2092,14 +2108,281 @@ textarea.error ~ .textarea_resize::before {
     max-width: 300px;
   }
 }
-.enter .pp__check label a {
-  color: #EC1744;
-  text-decoration: underline;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  transition: all 0.4s;
+.enter .info__item:first-child {
+  padding-top: 0;
 }
-.enter .pp__check label a:hover {
+.enter__container {
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-top: 50px;
+}
+
+.profile__hat {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding-bottom: 30px;
+}
+@media (max-width: 767px) {
+  .profile__hat {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+}
+.profile__title {
+  text-align: left;
+  font-size: 40px;
+  margin: 0;
+}
+@media (max-width: 1200px) {
+  .profile__title {
+    max-width: 100%;
+  }
+}
+.profile .content-block__more:not(:only-child) {
+  margin-top: 0;
+}
+.profile__btn {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.profile__btn .content-block-more {
+  padding: 15px 25px;
+}
+.profile__btn .content-block-more svg {
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.profile__btn .content-block-more:hover svg {
+  fill: #ffffff;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.profile__btn-exit {
+  margin-left: 40px;
+}
+@media (max-width: 767px) {
+  .profile__btn-exit {
+    margin-left: 0;
+  }
+  .profile__btn-exit.content-block__more:not(:only-child) {
+    margin-top: 30px;
+  }
+}
+.profile__btn-exit .content-block-more {
+  padding: 15px 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.profile__btn-exit .content-block-more span {
+  font-size: 18px;
+  font-weight: 400;
+}
+.profile__tabs {
+  margin-top: 30px;
+}
+.profile .tabs .tabs__nav-btn--active {
+  background: #040404;
+  color: #ffffff;
+  scale: 1.06;
+}
+.profile .tabs .tabs__nav-btn--active svg {
+  fill: #ffffff;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.profile__content {
+  background: #f7f7f7;
+  padding: 50px 40px;
+  border-radius: 15px;
+  margin-top: 30px;
+}
+@media (max-width: 767px) {
+  .profile__content {
+    padding: 30px 20px;
+  }
+}
+.profile__subtitle {
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 100%;
   color: #333333;
 }
-/*# sourceMappingURL=main.css.map */
+.profile__subtitle span {
+  color: #FF4D1C;
+}
+@media (max-width: 1200px) {
+  .profile__subtitle {
+    font-size: 25px;
+  }
+}
+@media (max-width: 767px) {
+  .profile__subtitle {
+    font-size: 20px;
+  }
+}
+.profile__text {
+  display: block;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 130%;
+  color: #333333;
+  max-width: 700px;
+  margin-top: 30px;
+}
+.profile__text p {
+  font-size: 18px;
+}
+.profile__text p:not(:last-child) {
+  margin-bottom: 20px;
+}
+@media (max-width: 1200px) {
+  .profile__text {
+    font-size: 16px;
+    margin-top: 20px;
+  }
+  .profile__text p {
+    font-size: 16px;
+  }
+}
+@media (max-width: 767px) {
+  .profile__text {
+    font-size: 14px;
+  }
+  .profile__text p {
+    font-size: 14px;
+  }
+}
+.profile .info__item:first-child {
+  margin-top: 30px;
+  padding-top: 0;
+  margin-bottom: 20px;
+}
+.profile input, .profile textarea {
+  background-color: #ffffff !important;
+  -webkit-box-shadow: inset 0 0 0 2px #e0e0e0;
+  box-shadow: inset 0 0 0 2px #e0e0e0;
+}
+.profile textarea {
+  min-height: 200px;
+}
+.profile-password {
+  max-width: 600px;
+}
+.profile-password__btn {
+  background: #ffffff;
+  max-width: 300px;
+}
+@media (max-width: 576px) {
+  .profile-password__btn {
+    max-width: 100%;
+  }
+}
+.profile-ask__success {
+  margin-top: 50px;
+  background: #39ac08;
+  padding: 20px;
+  border-radius: 20px;
+}
+.profile-ask__success .profile__subtitle {
+  color: #ffffff;
+}
+.profile-ask__success .profile__text {
+  color: #ffffff;
+  margin-top: 20px;
+}
+.profile-test__btn.content-block__more:not(:only-child) {
+  margin-top: 30px;
+}
+
+.tabs .tabs__nav-btn--active {
+  background-color: #ff0001;
+}
+.tabs .tabs__panel {
+  display: none;
+}
+.tabs .tabs__panel--active {
+  display: block;
+}
+.tabs__nav {
+  list-style: none;
+  padding-left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 0;
+  margin-left: -20px;
+  padding-left: 20px;
+  margin-right: -20px;
+  padding-right: 20px;
+}
+@media (max-width: 1200px) {
+  .tabs__nav {
+    overflow-x: scroll;
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    /* Hide scrollbar for IE, Edge and Firefox */
+  }
+  .tabs__nav::-webkit-scrollbar {
+    display: none;
+  }
+  .tabs__nav {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
+.tabs__nav-item {
+  max-width: 100%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+}
+.tabs__nav-item:not(:last-child) {
+  margin-right: 20px;
+}
+@media (max-width: 1200px) {
+  .tabs__nav-item:not(:last-child) {
+    margin-right: 10px;
+  }
+}
+.tabs__nav-btn {
+  font-size: 16px;
+}
+.step {
+  font-size: 30px;
+  line-height: 100%;
+  font-weight: 500;
+  text-align: center;
+}
+@media (max-width: 767px) {
+  .step {
+    font-size: 25px;
+  }
+}
+.step__container {
+  padding-bottom: 0;
+  padding-top: 50px;
+}
+.step span {
+  color: #FF4D1C;
+}
