--- a/css/components/admin.css
+++ b/css/components/admin.css
@@ -47,7 +47,7 @@
   display: none;
 }
 .admin__table td {
-  border-bottom: 1px solid #c4c4c4 !important;
+  border-bottom: 1px solid #aeaeae !important;
   padding-top: 15px !important;
   padding-bottom: 15px !important;
   color: #333333;
