--- a/css/components/control.css
+++ b/css/components/control.css
@@ -35,6 +35,7 @@
 }
 .control__subtitle {
   font-size: 22px;
+  font-weight: 500;
 }
 .control__table {
   margin-top: 50px;
@@ -58,45 +59,6 @@ table.dataTable {
   width: 100% !important;
 }
 
-/*! CSS Used from: https://nizhny800.ru/static/css/reset.css?v=1.9.100603 */
-/*! CSS Used from: https://nizhny800.ru/static/css/main.css?v=1.9.100603 */
-.btn {
-  display: inline-block;
-  position: relative;
-  padding: 22px 66px;
-  text-align: center;
-  cursor: pointer;
-  z-index: 1;
-}
-
-.btn:before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 100%;
-  height: 100%;
-  border-radius: 40px;
-  background: #161310;
-  z-index: -1;
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.btn:not([disabled]):hover:before {
-  -webkit-transform: scale(0.95);
-  -ms-transform: scale(0.95);
-  transform: scale(0.95);
-}
-
 input.txt_i {
   border: 2px solid #F3F3F3;
 }
@@ -106,7 +68,7 @@ input.txt_i {
   height: initial;
   width: initial;
   padding: 11px 20px;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .volh_ball_change_hidden_input .txt_i {
@@ -169,7 +131,7 @@ td.vt_td2.vt_td116 {
 .vol_anketa_fields_item:not(:last-child) {
   margin-bottom: 15px;
   padding-bottom: 15px;
-  border-bottom: 1px solid #9e9e9e;
+  border-bottom: 1px solid #aeaeae;
 }
 .vol_anketa_fields_item_title {
   font-size: 18px;
@@ -183,5 +145,112 @@ td.vt_td2.vt_td116 {
   max-width: 400px;
   text-align: end;
   color: #898989;
+}
+
+fieldset {
+  border: 0 !important;
+  outline: none !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.btn {
+  display: inline-block;
+  position: relative;
+  padding: 22px 66px;
+  text-align: center;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.btn:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  border-radius: 40px;
+  background: #161310;
+  z-index: -1;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.btn:not([disabled]):hover:before {
+  -webkit-transform: scale(0.95);
+  -ms-transform: scale(0.95);
+  transform: scale(0.95);
+}
+
+.vol_handling_item_title {
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+
+.vol_hand_item:not(:last-child) {
+  border-bottom: 1px solid #aeaeae;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+}
+
+.vol_handling {
+  margin-top: 50px;
+}
+
+.vol_hand_item_form select {
+  font-size: 17px;
+  padding: 10px 20px;
+  margin-right: 20px;
+  background: #fff;
+  border: 2px solid;
+}
+
+.volhand_email_item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 767px) {
+  form {
+    width: 100%;
+  }
+  .btn {
+    padding: 16px 28px;
+  }
+  input {
+    padding: 12px 20px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  fieldset {
+    min-width: initial;
+  }
+}
+.vol_handling_item_title span {
+  font-weight: 500;
+}
+
+.volhand_email_item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.volhand_email_item .email__sent {
+  display: block;
+  font-size: 16px;
+  color: #FF4D1C;
+  margin-left: 10px;
 }
 /*# sourceMappingURL=control.css.map */
